Fixed Issue #2 - wrapping bug

--- a/themes/default.css
+++ b/themes/default.css
@@ -3,10 +3,10 @@
 }
 
 .TagTrain-tag-list {
+	display: inline;
+
 	list-style: none;
 	margin: 0; padding: 0;
-
-	display: inline-block;
 }
 
 .TagTrain-tag {
@@ -32,8 +32,6 @@
 }
 
 .TagTrain-input {
-	display: inline-block;
-
 	border: none;
 	outline: none;
 }
